manifests.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    k8s.score.dev/resource-guid: 2266f3e9-bf03-4ba0-0158-386d67cd7f04
    k8s.score.dev/resource-uid: postgres.default#hello-world.db
    k8s.score.dev/source-workload: hello-world
  labels:
    app.kubernetes.io/instance: pg-hello-world-2266f3e9
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: pg-hello-world-2266f3e9
  name: pg-hello-world-2266f3e9
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pg-hello-world-2266f3e9
  serviceName: pg-hello-world-2266f3e9
  template:
    metadata:
      annotations:
        k8s.score.dev/resource-guid: 2266f3e9-bf03-4ba0-0158-386d67cd7f04
        k8s.score.dev/resource-uid: postgres.default#hello-world.db
        k8s.score.dev/source-workload: hello-world
      labels:
        app.kubernetes.io/instance: pg-hello-world-2266f3e9
        app.kubernetes.io/managed-by: score-k8s
        app.kubernetes.io/name: pg-hello-world-2266f3e9
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_USER
              value: user-kovHZAhl
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: pg-hello-world-2266f3e9
            - name: POSTGRES_DB
              value: db-gwLuPvmi
          image: mirror.gcr.io/postgres:17-alpine
          name: postgres-db
          ports:
            - containerPort: 5432
              name: postgres
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - user-kovHZAhl
                - -d
                - db-gwLuPvmi
            periodSeconds: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsGroup: 1000
            runAsUser: 1000
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pv-data
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
  volumeClaimTemplates:
    - metadata:
        annotations:
          k8s.score.dev/resource-guid: 2266f3e9-bf03-4ba0-0158-386d67cd7f04
          k8s.score.dev/resource-uid: postgres.default#hello-world.db
          k8s.score.dev/source-workload: hello-world
        labels:
          app.kubernetes.io/instance: pg-hello-world-2266f3e9
          app.kubernetes.io/managed-by: score-k8s
          app.kubernetes.io/name: pg-hello-world-2266f3e9
        name: pv-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    k8s.score.dev/resource-guid: 2266f3e9-bf03-4ba0-0158-386d67cd7f04
    k8s.score.dev/resource-uid: postgres.default#hello-world.db
    k8s.score.dev/source-workload: hello-world
  labels:
    app.kubernetes.io/instance: pg-hello-world-2266f3e9
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: pg-hello-world-2266f3e9
  name: pg-hello-world-2266f3e9
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/instance: pg-hello-world-2266f3e9
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    k8s.score.dev/resource-guid: aca30b24-60d9-4581-a865-0b5905c6c30b
    k8s.score.dev/resource-uid: route.default#hello-world.route
    k8s.score.dev/source-workload: hello-world
  labels:
    app.kubernetes.io/instance: route-hello-world-aca30b24
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: route-hello-world-aca30b24
  name: route-hello-world-aca30b24
spec:
  hostnames:
    - dnsrks2yb.localhost
  parentRefs:
    - name: default
  rules:
    - backendRefs:
        - name: hello-world
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    k8s.score.dev/workload-name: hello-world
  labels:
    app.kubernetes.io/instance: hello-world-f390b3479c
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: hello-world
  name: hello-world
spec:
  ports:
    - name: www
      port: 8080
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: hello-world-f390b3479c
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    k8s.score.dev/workload-name: hello-world
  labels:
    app.kubernetes.io/instance: hello-world-f390b3479c
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: hello-world
  name: hello-world
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: hello-world-f390b3479c
  strategy: {}
  template:
    metadata:
      annotations:
        k8s.score.dev/workload-name: hello-world
        tags: nodejs,http,website,javascript,postgres
      labels:
        app.kubernetes.io/instance: hello-world-f390b3479c
        app.kubernetes.io/managed-by: score-k8s
        app.kubernetes.io/name: hello-world
    spec:
      containers:
        - env:
            - name: DB_DATABASE
              value: db-gwLuPvmi
            - name: DB_HOST
              value: pg-hello-world-2266f3e9
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: pg-hello-world-2266f3e9
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: user-kovHZAhl
            - name: MESSAGE
              value: Hello, World!
            - name: PORT
              value: "3000"
          image: scorespec/sample-score-app:latest
          name: hello-world
          resources: {}
status: {}
